property module.name renamed to package.name

--- a/build.properties
+++ b/build.properties
@@ -17,10 +17,10 @@
 ##
 # org.glite.slcs.server build.properties
 #
-# $Id: build.properties,v 1.5 2007/07/23 09:36:25 vtschopp Exp $
+# $Id: build.properties,v 1.6 2007/07/23 14:44:58 vtschopp Exp $
 ##
 prefix=/opt/glite
-module.name=glite-slcs-server
-module.version=1.0.0
+package.name=glite-slcs-server
+package.version=1.0.0
 webapp.name=SLCS
 
