Attribute Defintions view

--- a/etc/SLCSMessageResources.properties
+++ b/etc/SLCSMessageResources.properties
@@ -1,5 +1,5 @@
 ##
-# $Id: SLCSMessageResources.properties,v 1.2 2007/07/19 13:37:33 vtschopp Exp $
+# $Id: SLCSMessageResources.properties,v 1.3 2007/10/23 14:11:08 vtschopp Exp $
 ##
 
 errors.header=<p class="error">
@@ -22,6 +22,7 @@ navigation.rule.list=List All Rules
 navigation.rule.new=New Rule
 navigation.audit.list=Audit Events
 navigation.admin.guide=Admin Guide
+navigation.attributeDefinitions=Attribute Definitions
 
 button.rule.edit=Edit
 button.rule.delete=Delete
