--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" output="build/classes" path="src"/>
+	<classpathentry kind="src" output="build/test/classes" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.glite.slcs.common"/>
 	<classpathentry kind="lib" path="/repository/externals/tomcat/5.5.20/noarch/common/lib/servlet-api.jar"/>
@@ -8,5 +9,5 @@
 	<classpathentry kind="lib" path="/repository/externals/apache-struts/1.3.5/noarch/struts-1.3.5/lib/struts-core-1.3.5.jar"/>
 	<classpathentry kind="lib" path="/repository/externals/commons-collections/3.2.0/noarch/commons-collections-3.2.jar"/>
 	<classpathentry kind="lib" path="/repository/externals/log4j/1.2.8/noarch/dist/lib/log4j-1.2.8.jar"/>
-	<classpathentry kind="output" path=""/>
+	<classpathentry kind="output" path="build"/>
 </classpath>
