added novosec-bc-ext external library

--- a/project/etics-externals.properties
+++ b/project/etics-externals.properties
@@ -29,7 +29,7 @@
 # externals into the local repository.
 # 
 # Author: Valery Tschopp <tschopp@switch.ch>
-# Version: $Id: etics-externals.properties,v 1.2 2007/07/23 09:18:24 vtschopp Exp $
+# Version: $Id: etics-externals.properties,v 1.3 2007/11/15 11:23:43 vtschopp Exp $
 ##
 
 # URL of the ETICS repository
@@ -125,4 +125,8 @@ ext.tomcat.name=tomcat
 ext.tomcat.platform=noarch
 ext.tomcat.distfile=tomcat.tar.gz
 
-    
+# novosec-bc-ext
+ext.novosec-bc-ext.version=1.0.1
+ext.novosec-bc-ext.name=novosec-bc-ext
+ext.novosec-bc-ext.platform=noarch
+ext.novosec-bc-ext.distfile=novosec-bc-ext-1.0.1-1.tar.gz    
