--- a/project/etics-externals.properties
+++ b/project/etics-externals.properties
@@ -29,7 +29,7 @@
 # externals into the local repository.
 # 
 # Author: Valery Tschopp <tschopp@switch.ch>
-# Version: $Id: etics-externals.properties,v 1.3 2007/11/15 11:23:43 vtschopp Exp $
+# Version: $Id: etics-externals.properties,v 1.4 2008/02/11 12:59:03 vtschopp Exp $
 ##
 
 # URL of the ETICS repository
@@ -47,11 +47,11 @@ ext.axis.name=axis
 ext.axis.platform=noarch
 ext.axis.distfile=axis.tar.gz
 
-# BouncyCastle
-ext.bouncycastle.version=1.34
+# BouncyCastle JDK 1.5
+ext.bouncycastle.version=1.37
 ext.bouncycastle.name=bouncycastle
 ext.bouncycastle.platform=noarch
-ext.bouncycastle.distfile=bouncycastle-1.34-jdk1.5.tar.gz
+ext.bouncycastle.distfile=bouncycastle-1.37-1jpp.tar.gz
 
 # commons-cli
 ext.commons-cli.version=1.0.0
