install depends on install-layout and stage for Henri Mikkonen

--- a/build.xml
+++ b/build.xml
@@ -19,7 +19,7 @@
     ETICS build for org.glite.slcs.server
 
     Author: Valery Tschopp <tschopp@switch.ch>
-    Version: $Id: build.xml,v 1.18 2008/03/10 12:52:01 vtschopp Exp $
+    Version: $Id: build.xml,v 1.19 2008/04/11 14:55:07 vtschopp Exp $
 -->
 <project name="org.glite.slcs.server" default="local-dist" basedir=".">
 
@@ -115,7 +115,7 @@
         <jar jarfile="${build.dir}/${package.name}.jar" basedir="${classes.dir}" />
     </target>
 
-    <!-- stage glite-slcs-server.jar in ../stage/lib dir -->
+    <!-- OPTIONAL: stage glite-slcs-server.jar in ../stage/share/java dir -->
     <target name="stage" depends="jar">
         <echo message="stage in ${stage.lib.dir}" />
         <mkdir dir="${stage.lib.dir}" />
@@ -235,7 +235,7 @@
    </target>
    
    <!-- install used by ETICS packager: ant -Dprefix=${prefix} install -->
-   <target name="install" depends="install-layout">
+   <target name="install" depends="install-layout,stage">
         <!-- copy everything in $prefix -->
         <echo message="install in ${prefix}"/>
         <copy todir="${prefix}">
