JPackage jakarta-commons-* packages defs added. commons-* removed.x

--- a/project/etics-externals.properties
+++ b/project/etics-externals.properties
@@ -29,7 +29,7 @@
 # externals into the local repository.
 # 
 # Author: Valery Tschopp <tschopp@switch.ch>
-# Version: $Id: etics-externals.properties,v 1.4 2008/02/11 12:59:03 vtschopp Exp $
+# Version: $Id: etics-externals.properties,v 1.5 2008/04/22 15:17:59 vtschopp Exp $
 ##
 
 # URL of the ETICS repository
@@ -54,52 +54,46 @@ ext.bouncycastle.platform=noarch
 ext.bouncycastle.distfile=bouncycastle-1.37-1jpp.tar.gz
 
 # commons-cli
-ext.commons-cli.version=1.0.0
-ext.commons-cli.name=commons-cli
-ext.commons-cli.platform=noarch
-ext.commons-cli.distfile=commons-cli.tar.gz
+ext.jakarta-commons-cli.name=jakarta-commons-cli
+ext.jakarta-commons-cli.version=1.0
+ext.jakarta-commons-cli.platform=noarch
+ext.jakarta-commons-cli.distfile=jakarta-commons-cli-1.0-8jpp.tar.gz
 
 # commons-codec
-ext.commons-codec.version=1.3.0
-ext.commons-codec.name=commons-codec
-ext.commons-codec.platform=noarch
-ext.commons-codec.distfile=commons-codec.tar.gz
+ext.jakarta-commons-codec.name=jakarta-commons-codec
+ext.jakarta-commons-codec.version=1.3
+ext.jakarta-commons-codec.platform=noarch
+ext.jakarta-commons-codec.distfile=jakarta-commons-codec-1.3-8jpp.tar.gz
 
 # commons-collections
-ext.commons-collections.version=3.2.0
-ext.commons-collections.name=commons-collections
-ext.commons-collections.platform=noarch
-ext.commons-collections.distfile=commons-collections.tar.gz
+ext.jakarta-commons-collections.name=jakarta-commons-collections
+ext.jakarta-commons-collections.version=3.2
+ext.jakarta-commons-collections.platform=noarch
+ext.jakarta-commons-collections.distfile=jakarta-commons-collections-3.2-2jpp.tar.gz
 
 # commons-configuration
-ext.commons-configuration.version=1.2.0
-ext.commons-configuration.name=commons-configuration
-ext.commons-configuration.platform=noarch
-ext.commons-configuration.distfile=commons-configuration.tar.gz
+ext.jakarta-commons-configuration.name=jakarta-commons-configuration
+ext.jakarta-commons-configuration.version=1.4
+ext.jakarta-commons-configuration.platform=noarch
+ext.jakarta-commons-configuration.distfile=jakarta-commons-configuration-1.4-1jpp.tar.gz
 
 # commons-httpclient
-ext.commons-httpclient.version=3.0.1
-ext.commons-httpclient.name=commons-httpclient
-ext.commons-httpclient.platform=noarch
-ext.commons-httpclient.distfile=commons-httpclient.tar.gz
+ext.jakarta-commons-httpclient.name=jakarta-commons-httpclient
+ext.jakarta-commons-httpclient.version=3.0.1
+ext.jakarta-commons-httpclient.platform=noarch
+ext.jakarta-commons-httpclient.distfile=jakarta-commons-httpclient-3.0.1-1jpp.tar.gz
 
 # commons-lang
-ext.commons-lang.version=2.1.0
-ext.commons-lang.name=commons-lang
-ext.commons-lang.platform=noarch
-ext.commons-lang.distfile=commons-lang.tar.gz
+ext.jakarta-commons-lang.name=jakarta-commons-lang
+ext.jakarta-commons-lang.version=2.3
+ext.jakarta-commons-lang.platform=noarch
+ext.jakarta-commons-lang.distfile=jakarta-commons-lang-2.3-1jpp.tar.gz
 
 # commons-logging
-ext.commons-logging.version=1.0.4
-ext.commons-logging.name=commons-logging
-ext.commons-logging.platform=noarch
-ext.commons-logging.distfile=commons-logging.tar.gz
-
-# jericho-html
-ext.jericho-html.version=2.3.0
-ext.jericho-html.name=jericho-html
-ext.jericho-html.platform=noarch
-ext.jericho-html.distfile=jericho-html.tar.gz
+ext.jakarta-commons-logging.name=jakarta-commons-logging
+ext.jakarta-commons-logging.version=1.1
+ext.jakarta-commons-logging.platform=noarch
+ext.jakarta-commons-logging.distfile=jakarta-commons-logging-1.1-4jpp.tar.gz
 
 # junit
 ext.junit.version=3.8.1
