--- a/.classpath
+++ b/.classpath
@@ -5,9 +5,10 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.glite.slcs.common"/>
 	<classpathentry kind="lib" path="/repository/externals/tomcat/5.5.20/noarch/common/lib/servlet-api.jar"/>
-	<classpathentry kind="lib" path="/repository/externals/bouncycastle/1.34/noarch/jars/bcmail-jdk15-134.jar"/>
 	<classpathentry kind="lib" path="/repository/externals/apache-struts/1.3.5/noarch/struts-1.3.5/lib/struts-core-1.3.5.jar"/>
-	<classpathentry kind="lib" path="/repository/externals/commons-collections/3.2.0/noarch/commons-collections-3.2.jar"/>
 	<classpathentry kind="lib" path="/repository/externals/log4j/1.2.8/noarch/dist/lib/log4j-1.2.8.jar"/>
+	<classpathentry kind="lib" path="/repository/externals/jakarta-commons-collections/3.2/noarch/usr/share/java/jakarta-commons-collections-3.2.jar"/>
+	<classpathentry kind="lib" path="/repository/externals/novosec-bc-ext/1.0.1/noarch/novosec_cmp_jdk15.jar"/>
+	<classpathentry kind="lib" path="/repository/externals/bouncycastle/1.37/noarch/share/java-ext/bouncycastle-jdk1.5/bcmail-1.37.jar"/>
 	<classpathentry kind="output" path="build"/>
 </classpath>
